Implement P0-07 reflection APIs
